<resources>
    <string name="app_name">CopyProject</string>

    <string name="start_tv">"跳过(%s)"</string>
    <string name="replace_tv">"%"</string>
    <string name="finish_tv">关了</string>
    <string name="common_app_exit_hint">再按一次退出程序</string>


    <!--引导页-->
    <string name="guide_tv">立 即 体 验</string>
    <!--登录页-->
    <string name="login_org_hint">请输入企业名称</string>
    <string name="login_name_hint">账号/邮箱/手机号</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_org_logo">企业名称</string>
    <string name="login_name_logo">账&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号</string>
    <string name="login_pwd_logo">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码</string>
    <string name="login">登&#160;&#160;&#160;录</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="login_org">深圳知学云科技有限公司</string>
    <string name="login_hotline">400-656-8595</string>
    <string name="login_no_org">机构名不能为空</string>
    <string name="login_no_accout">账户不能为空</string>
    <string name="login_no_pwd">密码不能为空</string>

    <!--通知-->
    <string name="begin_down" >开始下载</string>
    <string name="down_faild" >下载失败</string>
    <!--表情包-->
    <string name="cannot_emoji_input">不支持输入表情!</string>
    <!--dialog提示框-->
    <string name="time_out">请求超时</string>
    <string name="common_dialog_hint" >加载中...</string>
    <!--popupwindows提示框-->
    <string name="about_us">关于知学云</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="popup_hint">提示</string>
    <string name="reload_hint">重新登录</string>
    <string name="main_info_txt_notety">温馨提醒</string>
    <string name="main_info_txt_every">不再提醒</string>
    <string name="main_info_txt_knows">我知道了</string>
    <string name="common_app_new_version">发现新版本</string>
    <string name="common_app_new_version_update">立即更新</string>
    <string name="common_app_new_version_ignore">稍后再说</string>
    <!--下载通知栏-->
    <string name="notification_title">正在下载</string>
    <!--网络请求-->
    <string name="your_account">您的账号于</string>
    <string name="another_phone">在另一台</string>
    <string name="device_verify">设备登录,请重新登录</string>
    <string name="login_time_out">登录超时,请重新登录</string>
    <string name="internet_out">当前网络不可用,请检查你的网络设置</string>
    <string name="request_fai">请求失败</string>
    <string name="common_pause_no">暂无</string>

</resources>
